# Ceceilia

./: .bazelrc  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  404.html  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Ceceilia.sln  Ceceilia.slnx  MODULE.bazel  Makefile  README.md  WORKSPACE  build.sh  clean.ps1  clean.sh  conanfile.py  config.h.cmake  config.h.meson  config.h.msbuild  config.h.msbuild.py  config.h.py  config.h.xmake  index.html  meson.build  meson_options.txt  mkdocs.yml  vcpkg.json  xmake.lua
.github/workflows/: mirror-to-codeberg.yml
ASCII/: index.html
CC/: index.html
CPU/: index.html
CUDA/: index.html
Ceceilia/: Ceceilia.vcxproj  Ceceilia.vcxproj.filters  xmake.lua
Ceceilia/STL/: README.md  array  list  map  set  vector
Ceceilia/core/: coroutine.hpp  coroutine.ixx  string.hpp  string.ixx
Ceceilia/utils/: console.h  error_utils.h  fmt.hpp  json.hpp  json.ixx  loadlibrary.hpp  logger_utils.hpp  mqtt_utils.hpp  mqtt_utils.ixx
GNU/: index.html
MSVC/: index.html
Meson/: index.html
X86/: index.html
XMake/: index.html
asio_learn/: CMakeLists.txt
bazel/: .gitignore  README.md  index.html
benchmark/: CMakeLists.txt  benchmark_learn.cpp
boost_learn/: BUILD.bazel  CMakeLists.txt  boost_asio.cpp  boost_asio_tcp_server.hpp  boost_threadpool.cpp  boost_uuid.cpp  xmake.lua
cc/: BUILD.bazel  CMakeLists.txt  Makefile  OpenMP.cpp  Pimpl.cpp  VLA.c  alias.cpp  alignas_alignof.cpp  attribute.cpp  base_type.cpp  cc.vcxproj  cc.vcxproj.filters  charconvert.hpp  charconvert_example.cpp  classes.cpp  constexpr.cpp  containers.cpp  cstrings.c  ctimer.c  dump.cpp  dump.hpp  enable_shared_from_this.cpp  exceptions.cpp  function_call.cpp  function_pointer.cpp  lambda.cpp  logger.h  logger.hpp  macro.h  memorypool.h  memorypool.hpp  meson.build  pointers.c  random.cpp  ranges.cpp  regular_expressions.cpp  replace.cpp  rvalue_reference.cpp  smater_pointer.cpp  strings.cpp  (+8 more)
cc/SIMD/: CMakeLists.txt  simd.c  xmake.lua
cc/SMID/: smid.c
cc/classes/: BUILD.bazel  CMakeLists.txt  CRTP.cpp  Pimpl.cpp  Pimpl.hpp  Pimpl_test.cpp  classes.cpp  polymorphism_proxy.cpp  struct.c  test_Pimpl.cpp  xmake.lua
cc/concurrency/: CMakeLists.txt  actor_csp.cpp  atomic.cpp  condition_variable.cpp  future.cpp  lock.cpp  pthread.c  pthreadpool.c  pthreadpool.h  pthreadpool_example.c  singleton.cpp  spinlock.hpp  sync.cpp  test_spinlock.cpp  thread.cpp  threadpool.hpp  threadpool_example.cpp  threadsafe_queue.hpp  winthread.c  winthreadpool.c  xmake.lua
cc/containers/: CMakeLists.txt  any.cpp  containers.cpp  optional.cpp  span.cpp  tuple.cpp  xmake.lua
cc/coroutine/: CMakeLists.txt  generator.hpp  generator_example.cpp  xmake.lua
cc/file/: BUILD.bazel  CMakeLists.txt  cfile.c  csv_file.cpp  file.cpp  json_file.cpp  meson.build  toml_file.cpp  xmake.lua  xml_file.cpp  yaml_file.cpp
cc/memory/: CMakeLists.txt  README.md  jemalloc_learn.cpp  memory.cpp
cc/modules/: CMakeLists.txt  hello.ixx  main.cpp  xmake.lua
cc/modules/Ahri/: Ahri-KDA.ixx  Ahri-Popstar.ixx  Ahri.ixx
cc/modules/Ahri/Nono/: Animal.cpp  Animal.hpp  Nono.ixx
cc/modules/Ahri/Sokyoei/: Sokyoei.ixx  Sokyoei_impl.ixx
cc/net/: CMakeLists.txt  client.h  client.hpp  server.h  server.hpp  xmake.lua
cc/reflection/: reflection.cpp
cc/socket_operations/: client.hpp  client_example.cpp  server.hpp  server_example.cpp
cc/socket_operations/asio/: tcp_client.hpp  tcp_server.hpp
cc/template/: CMakeLists.txt  concept.cpp  template.cpp  xmake.lua
cmake/: README.md  compiler.cmake  download.cmake  install.cmake  library.cmake  package.cmake  utils.cmake
cuda/: CMakeLists.txt  README.md  cuda.vcxproj  device_info.cu  event.cu  shared_memory.cu  stream.cu
cuda/docs/: NVIDIA GPU.md
docs/: ASCII.md  CC.md  CPU.md  CUDA.md  GNU.md  MSVC.md  Meson.md  X86.md  XMake.md  bazel.md  build.md  index.md  vcpkg.md
drogon_learn/: CMakeLists.txt  main.cpp
drogon_learn/controller/: user.cpp  user.hpp  ws.cpp  ws.hpp
drogon_learn/services/: user.hpp
folly_learn/: CMakeLists.txt  folly_executor.cpp  folly_string.cpp  xmake.lua
include/: Ahri.cuh  Ahri.h  Ahri.hpp  Ahri.ixx  Ceceilia.hpp  Constants.h  Contants.h  Nono.cuh  Nono.hpp  Sokyoei.cuh  Sokyoei.h  Sokyoei.hpp  Utils.h  cuda_utils.cuh
include/Ahri/: Ahri.cuh  Ahri.hpp  Ceceilia.hpp  Nono.h  Utils.h  Utils.hpp
include/Ahri/Ceceilia/: BUILD.bazel  Ceceilia.vcxproj.filters
include/Ahri/Ceceilia/STL/: array  list  map  set  vector
include/Ahri/Ceceilia/core/: coroutine.hpp  string.hpp
include/Ahri/Ceceilia/utils/: check.hpp  console.h  error_utils.h  fmt.hpp  json.hpp  loadlibrary.hpp  logger_utils.hpp  logger_utils.ixx  mqtt_utils.hpp
learning/: CMakeLists.txt
learning/drogon_learning/: README.md  drogon.config.yaml
learning/drogon_learning/controller/: simple.cpp  simple.hpp
learning/drogon_learning/models/: user.hpp
learning/drogon_learning/utils/: meta.hpp
learning/protobuf_learning/: BUILD.bazel  CMakeLists.txt  protobuf_main.cpp  protobuf_v2.proto  protobuf_v3.proto
linux/: CMakeLists.txt  Makefile  client.c  epoll_server.c  linuxapi.cpp  server.c
protobuf_learn/: CMakeLists.txt  protobuf_learn.cpp
search/: search_index.json
src/Ahri/Ceceilia/: ceceilia_module.ixx
stylesheets/: extra.css
tests/: BUILD.bazel  CMakeLists.txt  meson.build  test_Ahri.cpp  test_logger_utils.cpp  test_mqtt_publish.cpp  test_mqtt_subscribe.cpp  xmake.lua
tests/Ahri/Ceceilia/utils/: CMakeLists.txt  test_error_utils.c  test_json.cpp  test_logger_utils.cpp  test_mqtt_publish.cpp  test_mqtt_subscribe.cpp
tests/Ceceilia/utils/: CMakeLists.txt  test_error_utils.c  test_json.cpp  test_mqtt_publish.cpp
vcpkg/: index.html
windows/: CMakeLists.txt  IOCP_server.cpp  README.md  download.c  winapi.cpp  winmain.cpp
xmake/: README.md
