###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

"""
Ceceilia
"""

module(name = "ceceilia", version = "0.0.1")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.5.0")

########################################################################################################################
# library
########################################################################################################################
bazel_dep(name = "fmt", version = "11.1.3")
bazel_dep(name = "spdlog", version = "1.15.1")
bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "tinyxml2", version = "10.0.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "tomlplusplus", version = "3.4.0")
bazel_dep(name = "protobuf", version = "29.3")

# boost
bazel_dep(name = "boost.algorithm", version = "1.83.0")
bazel_dep(name = "boost.align", version = "1.83.0")
bazel_dep(name = "boost.any", version = "1.83.0")
bazel_dep(name = "boost.array", version = "1.83.0")
bazel_dep(name = "boost.asio", version = "1.83.0")
bazel_dep(name = "boost.assert", version = "1.83.0")
bazel_dep(name = "boost.atomic", version = "1.83.0")
bazel_dep(name = "boost.beast", version = "1.83.0")
bazel_dep(name = "boost.bimap", version = "1.83.0")
bazel_dep(name = "boost.bind", version = "1.83.0")
bazel_dep(name = "boost.chrono", version = "1.83.0")
bazel_dep(name = "boost.circular_buffer", version = "1.83.0")
bazel_dep(name = "boost.compatibility", version = "1.83.0")
bazel_dep(name = "boost.concept_check", version = "1.83.0")
bazel_dep(name = "boost.config", version = "1.83.0")
bazel_dep(name = "boost.container", version = "1.83.0")
bazel_dep(name = "boost.container_hash", version = "1.83.0")
bazel_dep(name = "boost.context", version = "1.83.0")
bazel_dep(name = "boost.conversion", version = "1.83.0")
bazel_dep(name = "boost.core", version = "1.83.0")
bazel_dep(name = "boost.coroutine", version = "1.83.0")
# bazel_dep(name = "boost.crc", version = "1.83.0")
bazel_dep(name = "boost.date_time", version = "1.83.0")
bazel_dep(name = "boost.describe", version = "1.83.0")
bazel_dep(name = "boost.detail", version = "1.83.0")
# bazel_dep(name = "boost.dll", version = "1.83.0")
bazel_dep(name = "boost.dynamic_bitset", version = "1.83.0")
bazel_dep(name = "boost.endian", version = "1.83.0")
bazel_dep(name = "boost.exception", version = "1.83.0")
bazel_dep(name = "boost.filesystem", version = "1.83.0")
bazel_dep(name = "boost.foreach", version = "1.83.0")
bazel_dep(name = "boost.format", version = "1.83.0")
bazel_dep(name = "boost.function", version = "1.83.0")
bazel_dep(name = "boost.function_types", version = "1.83.0")
bazel_dep(name = "boost.functional", version = "1.83.0")
bazel_dep(name = "boost.fusion", version = "1.83.0")
bazel_dep(name = "boost.geometry", version = "1.83.0")
bazel_dep(name = "boost.graph", version = "1.83.0")
bazel_dep(name = "boost.heap", version = "1.83.0")
bazel_dep(name = "boost.icl", version = "1.83.0")
bazel_dep(name = "boost.integer", version = "1.83.0")
bazel_dep(name = "boost.interprocess", version = "1.83.0")
bazel_dep(name = "boost.intrusive", version = "1.83.0")
bazel_dep(name = "boost.io", version = "1.83.0")
bazel_dep(name = "boost.iostreams", version = "1.83.0")
bazel_dep(name = "boost.iterator", version = "1.83.0")
bazel_dep(name = "boost.json", version = "1.83.0")
bazel_dep(name = "boost.lambda", version = "1.83.0")
bazel_dep(name = "boost.lexical_cast", version = "1.83.0")
# bazel_dep(name = "boost.log", version = "1.83.0")
bazel_dep(name = "boost.logic", version = "1.83.0")
bazel_dep(name = "boost.math", version = "1.83.0")
bazel_dep(name = "boost.move", version = "1.83.0")
bazel_dep(name = "boost.mp11", version = "1.83.0")
bazel_dep(name = "boost.mpl", version = "1.83.0")
bazel_dep(name = "boost.multi_array", version = "1.83.0")
bazel_dep(name = "boost.multi_index", version = "1.83.0")
bazel_dep(name = "boost.multiprecision", version = "1.83.0")
bazel_dep(name = "boost.numeric_conversion", version = "1.83.0")
bazel_dep(name = "boost.optional", version = "1.83.0")
bazel_dep(name = "boost.parameter", version = "1.83.0")
bazel_dep(name = "boost.pfr", version = "1.83.0")
bazel_dep(name = "boost.phoenix", version = "1.83.0")
bazel_dep(name = "boost.polygon", version = "1.83.0")
bazel_dep(name = "boost.pool", version = "1.83.0")
bazel_dep(name = "boost.predef", version = "1.83.0")
bazel_dep(name = "boost.preprocessor", version = "1.83.0")
bazel_dep(name = "boost.process", version = "1.83.0")
bazel_dep(name = "boost.program_options", version = "1.83.0")
bazel_dep(name = "boost.property_map", version = "1.83.0")
bazel_dep(name = "boost.property_tree", version = "1.83.0")
bazel_dep(name = "boost.proto", version = "1.83.0")
bazel_dep(name = "boost.ptr_container", version = "1.83.0")
bazel_dep(name = "boost.qvm", version = "1.83.0")
bazel_dep(name = "boost.random", version = "1.83.0")
bazel_dep(name = "boost.range", version = "1.83.0")
bazel_dep(name = "boost.ratio", version = "1.83.0")
bazel_dep(name = "boost.rational", version = "1.83.0")
bazel_dep(name = "boost.regex", version = "1.83.0")
# bazel_dep(name = "boost.scope", version = "1.83.0")
bazel_dep(name = "boost.scope_exit", version = "1.83.0")
bazel_dep(name = "boost.serialization", version = "1.83.0")
bazel_dep(name = "boost.signals2", version = "1.83.0")
bazel_dep(name = "boost.smart_ptr", version = "1.83.0")
bazel_dep(name = "boost.sort", version = "1.83.0")
bazel_dep(name = "boost.spirit", version = "1.83.0")
bazel_dep(name = "boost.stacktrace", version = "1.83.0")
bazel_dep(name = "boost.static_assert", version = "1.83.0")
bazel_dep(name = "boost.static_string", version = "1.83.0")
bazel_dep(name = "boost.system", version = "1.83.0")
bazel_dep(name = "boost.test", version = "1.83.0")
bazel_dep(name = "boost.thread", version = "1.83.0")
bazel_dep(name = "boost.throw_exception", version = "1.83.0")
# bazel_dep(name = "boost.timer", version = "1.83.0")
bazel_dep(name = "boost.tokenizer", version = "1.83.0")
bazel_dep(name = "boost.tti", version = "1.83.0")
bazel_dep(name = "boost.tuple", version = "1.83.0")
bazel_dep(name = "boost.type_index", version = "1.83.0")
bazel_dep(name = "boost.type_traits", version = "1.83.0")
bazel_dep(name = "boost.typeof", version = "1.83.0")
bazel_dep(name = "boost.units", version = "1.83.0")
bazel_dep(name = "boost.unordered", version = "1.83.0")
bazel_dep(name = "boost.url", version = "1.83.0")
bazel_dep(name = "boost.utility", version = "1.83.0")
bazel_dep(name = "boost.uuid", version = "1.83.0")
bazel_dep(name = "boost.variant", version = "1.83.0")
bazel_dep(name = "boost.variant2", version = "1.83.0")
bazel_dep(name = "boost.winapi", version = "1.83.0")
bazel_dep(name = "boost.xpressive", version = "1.83.0")

cc = use_extension("@rules_cc//cc:extensions.bzl", "cc_extensions")
cc.toolchain()
