cc_binary(
    name = "boost_asio",
    srcs = ["boost_asio.cpp"],
    deps = [
        "@boost.asio",
        "@fmt",
    ],
)

cc_binary(
    name = "boost_threadpool",
    srcs = ["boost_threadpool.cpp"],
    deps = ["@boost.asio"],
)

cc_binary(
    name = "boost_uuid",
    srcs = ["boost_uuid.cpp"],
    deps = ["@boost.uuid//:boost.uuid"],
)
