cc_binary(name="attribute", srcs=["attribute.cpp"])
cc_binary(name="base_type", srcs=["base_type.cpp"])
cc_binary(name="classes", srcs=["classes.cpp"])
cc_binary(name="constexpr", srcs=["constexpr.cpp"])
cc_binary(name="containers", srcs=["containers.cpp"])
cc_binary(name="ctimer", srcs=["ctimer.c"])
cc_binary(name="exceptions", srcs=["exceptions.cpp"])
cc_binary(name="function_call", srcs=["function_call.cpp"])
cc_binary(name="function_pointer", srcs=["function_pointer.cpp"])
cc_binary(name="lambda", srcs=["lambda.cpp"])
cc_binary(name="OpenMP", srcs=["OpenMP.cpp"])
cc_binary(name="Pimpl.cpp", srcs=["Pimpl.hpp", "Pimpl.cpp"])
cc_binary(name="pointers", srcs=["pointers.c"])
cc_binary(name="rvalue_reference", srcs=["rvalue_reference.cpp"])
cc_binary(name="smater_pointer", srcs=["smater_pointer.cpp"])
cc_binary(name="strings", srcs=["strings.cpp"])
cc_binary(name="templete", srcs=["templete.cpp"])
cc_binary(name="timer", srcs=["timer.cpp"])
cc_binary(name="type_inference", srcs=["type_inference.cpp"])
cc_binary(name="variable_parameter", srcs=["variable_parameter.cpp"])
cc_binary(name="VLA", srcs=["VLA.c"])
