add_executable(exceptions exceptions.cpp)
add_executable(function_call function_call.cpp)
add_executable(function_pointer function_pointer.cpp)

find_package(OpenMP REQUIRED)
add_executable(OpenMP OpenMP.cpp)
if(OpenMP_CXX_FOUND)
    target_link_libraries(OpenMP PUBLIC OpenMP::OpenMP_CXX)
endif()

add_executable(timer timer.cpp)
add_executable(variable_parameter variable_parameter.cpp)
add_executable(VLA VLA.c)

add_subdirectory(classes)
add_subdirectory(concurrency)
add_subdirectory(coroutine)
add_subdirectory(file)
add_subdirectory(net)
add_subdirectory(SIMD)
add_subdirectory(template)
