alias = executable('alias', sources: 'alias.cpp')
alignas_alignof = executable('alignas_alignof', sources: 'alignas_alignof.cpp')
attribute = executable('attribute', sources: 'attribute.cpp')
base_type = executable('base_type', sources: 'base_type.cpp')
constexpr = executable('constexpr', sources: 'constexpr.cpp')
cstrings = executable('cstrings', sources: 'cstrings.c')
ctimer = executable('ctimer', sources: 'ctimer.c')
exceptions = executable('exceptions', sources: 'exceptions.cpp')
function_call = executable('function_call', sources: 'function_call.cpp')
function_pointer = executable('function_pointer', sources: 'function_pointer.cpp')
lambda = executable('lambda', sources: 'lambda.cpp')
OpenMP = executable('OpenMP', sources: 'OpenMP.cpp')
pointers = executable('pointers', sources: 'pointers.c')
random = executable('random', sources: 'random.cpp')
ranges = executable('ranges', sources: 'ranges.cpp')
regular_expressions = executable('regular_expressions', sources: 'regular_expressions.cpp')
replace = executable('replace', sources: 'replace.cpp')
rvalue_reference = executable('rvalue_reference', sources: 'rvalue_reference.cpp')
smater_pointer = executable('smater_pointer', sources: 'smater_pointer.cpp')
strings = executable('strings', sources: 'strings.cpp')
three_way_comparison = executable('three_way_comparison', sources: 'three_way_comparison.cpp')
timer = executable('timer', sources: 'timer.cpp')
type_inference = executable('type_inference', sources: 'type_inference.cpp')
variable_parameter = executable('variable_parameter', sources: 'variable_parameter.cpp')
VLA = executable('VLA', sources: 'VLA.c')

subdir('file')
