add_executable(thread thread.cpp)
add_executable(future future.cpp)
add_executable(threadpool_example threadpool.hpp threadpool_example.cpp)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    find_package(Threads REQUIRED)
    if(Threads_FOUND)
        add_executable(pthread pthread.c)
        target_link_libraries(pthread PUBLIC Threads::Threads)
    endif()
endif()
