add_executable(actor_csp actor_csp.cpp)
add_executable(atomic atomic.cpp)
add_executable(condition_variable condition_variable.cpp)
add_executable(future future.cpp)
add_executable(lock lock.cpp)
add_executable(singleton singleton.cpp)
add_executable(thread thread.cpp)
add_executable(threadpool_example threadpool_example.cpp threadpool.hpp)

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    find_package(Threads REQUIRED)
    if(Threads_FOUND)
        add_executable(pthread pthread.c)
        target_link_libraries(pthread PRIVATE Threads::Threads)
        add_executable(pthreadpool_example pthreadpool_example.c pthreadpool.h pthreadpool.c)
        target_link_libraries(pthreadpool_example PRIVATE Threads::Threads)
    endif()
endif()

if(WIN32)
    add_executable(winthread winthread.c)
    add_executable(winthreadpool winthreadpool.c)
endif()
